--- a/style.css
+++ b/style.css
@@ -1,5 +1,99 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+body {
+  background-image: url('https://media.istockphoto.com/id/1290903508/photo/top-view-of-american-football-field.jpg?s=612x612&w=0&k=20&c=XdpMBEskfj2eKU7_xARSuHzsZLltHFDEWqYGBaVLTa4=');
+    background-position: center;
+  font-family: Arial, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  text-align: center;
+  margin: 50px 0;
+  font-size: 75px;
+  color: #f44336;
+  background-color: #fff;
+  border-bottom: black 7px solid;
+  border-top: black 7px solid;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 0 20px;
+}
+
+.player-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 350px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.player-card h2, .player-card p {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.player-image {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.see-details, .remove-button, .back-button, form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin-top: 10px;
+}
+
+.see-details {
+  background-color: #008CBA;
+}
+
+.remove-button{
+  background-color: #f44336;
+}
+
+.back-button {
+  background-color: #808080;
+}
+
+form button {
+  background-color: #008CBA;
+}
+
+form {
+  justify-content: center;
+  background-color: #fff;
+  display: grid;
+  margin: auto;
+  margin-bottom: 50px;
+  width: 300px;
+  height: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+}
